# rockbox-scrobbler

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  LICENSE  README.md  cli.spec  pyproject.toml  renovate.json  rockbox-scrobbler-ui.spec  ui.spec
.github/workflows/: build.yml  release.yml
rockbox_listenbrainz_scrobbler/: __init__.py  api_model.py  cli.py  exceptions.py  model.py  rockbox_listenbrainz_ui.py  scrobbling.py  ui.py
