[tool.poetry]
name = "rockbox-listenbrainz-scrobbler"
version = "0.1.0"
description = ""
authors = ["André Büsgen <andre.buesgen@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
typer = "^0.15.0"
pydantic = "^2.8.2"
pyside6 = "^6.7.2"
requests = "^2.32.3"

[tool.poetry.scripts]
rockbox-listenbrainz = "rockbox_listenbrainz_scrobbler.cli:main"


[tool.poetry.group.dev.dependencies]
pylint = "3.3.4"
black = "24.10.0"
pre-commit = "4.0.1"
nuitka = "2.6.6"
types-requests = "^2.32.0.20241016"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
